Replace JDK 21 List methods in GameDirectoriesTest
Assisted-by: codex:gpt-5.6-sol